--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -27,7 +27,7 @@ open_history = False
 open_headers = True
 app_host = http://localhost
 app_port = 8000
-cdn_url = https://g.blfrp.cn/
+cdn_url = https://gh-proxy.com/
 final_file = output/brtv.txt
 hotel_num = 3
 hotel_page_num = 1
@@ -41,6 +41,8 @@ ipv_type_prefer = auto
 location = 
 local_file = config/user_local.txt
 local_num = 1
+logo_url = https://gitee.com/mytv-android/myTVlogo/raw/main/img/
+logo_type = png
 min_resolution = 1080x720
 max_resolution = 19200x10800
 min_speed = 0.5
@@ -61,4 +63,5 @@ time_zone = Asia/Shanghai
 urls_limit = 10
 update_interval = 12.0
 update_time_position = top
+
 
